--- a/Fortuna/Pages/Index.razor
+++ b/Fortuna/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
 
-<h1>Index page coming soon!</h1>
+@* <img src="/images/title.png" alt="The (unofficial) tabletop of [Fortuna]"/> *@
 
-You probably want to go <a href="CharacterCreator">here</a> instead.
+<p>You probably want to go <a href="CharacterCreator">here</a> instead.</p>
