soem more adjustments

--- a/Fortuna/Pages/Index.razor
+++ b/Fortuna/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
 
-@* <img src="/images/title.png" alt="The (unofficial) tabletop of [Fortuna]"/> *@
+<img src="/images/title.png" alt="The (unofficial) tabletop of [Fortuna]"/>
 
 <p>You probably want to go <a href="CharacterCreator">here</a> instead.</p>
