--- a/Fortuna/Pages/CharacterCreator.razor
+++ b/Fortuna/Pages/CharacterCreator.razor
@@ -1,5 +1,7 @@
 ﻿@page "/CharacterCreator"
+@using BlazorDownloadFile
 @using System.Text.Json
+@using System.IO
 @inject HttpClient _http
 
 <div style="display: flex">
@@ -180,17 +182,20 @@
 
 <h2>Save/Load</h2>
 
-<textarea @bind="_saveLoadJson" style="width: 100%"></textarea>
 <button @onclick="ExportToJson">[Export]</button>
-<button @onclick="ImportFromJson">[Import]</button>
+<InputFile OnChange="ImportFromJson">[Import File]</InputFile>
 @_importError
 
 @code {
+
+    [Inject]
+    public IBlazorDownloadFileService BlazorDownloadFileService { get; set; }
+
     private FortunaSheet _playerSheet = new();
     private Dictionary<string, Trait> _traitsList = new() { { "Please wait...", new Trait(TraitValue.Special, "Impatient", "You didn't wait, you bastard! I asked nicely!") } };
 
     private string _importError;
-    private string _saveLoadJson;
+
     private static readonly JsonSerializerOptions Options = new(JsonSerializerDefaults.Web) { WriteIndented = true, IncludeFields = true };
 
     private string _newItemText = "";
@@ -219,14 +224,17 @@
         _playerSheet.Traits.Remove(toRemove);
     }
 
-    void ExportToJson()
+    async void ExportToJson()
     {
-        _saveLoadJson = JsonSerializer.Serialize(_playerSheet, typeof(FortunaSheet), Options);
+        await BlazorDownloadFileService.DownloadFileFromText($"{_playerSheet.Name}-{DateTime.Now:MM-dd-yy_hh:mm:ss}.json", JsonSerializer.Serialize(_playerSheet, typeof(FortunaSheet), Options), "text/json");
     }
-    void ImportFromJson()
+
+    private async Task ImportFromJson(InputFileChangeEventArgs args)
     {
+        Stream stream = args.File.OpenReadStream();
+        StreamReader reader = new(stream);
         try {
-            _playerSheet = JsonSerializer.Deserialize<FortunaSheet>(_saveLoadJson, Options);
+            _playerSheet = JsonSerializer.Deserialize<FortunaSheet>(await reader.ReadToEndAsync(), Options);
         }
         catch (JsonException e) {
             _importError = e.Message;
