--- a/Fortuna/Shared/MainLayout.razor.css
+++ b/Fortuna/Shared/MainLayout.razor.css
@@ -20,7 +20,7 @@
 }
 
 .sidebar {
-    background-image: url("/images/layer1.png"), url("/images/layer2.png"), url("/images/layer3.png");
+    background-image: url("images/layer1.png"), url("images/layer2.png"), url("images/layer3.png");
     background-repeat: repeat, repeat, repeat;
     background-blend-mode: lighten, lighten, lighten;
     background-size: 480px 480px;
