--- a/Fortuna/Shared/NavMenu.razor
+++ b/Fortuna/Shared/NavMenu.razor
@@ -14,12 +14,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="CharacterCreator">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Character Creator
+                <span class="oi oi-person" aria-hidden="true"></span> Character Creator
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="AftikDesigner">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Aftik Designer
+                <span class="oi oi-brush" aria-hidden="true"></span> Aftik Designer
             </NavLink>
         </li>
     </ul>
