Amends footer attribution message and error message

--- a/Fortuna/Shared/MainLayout.razor
+++ b/Fortuna/Shared/MainLayout.razor
@@ -13,7 +13,7 @@
         <div class="content px-4">
             @Body
             <hr/>
-            <p>Note: This site is not affiliated with <a href="https://cosmosdex.com/">The Cosmosdex</a> in any way. This site was made specifically for the benefit of fans, and if you want to support [Fortuna] and The Cosmosdex, please consider donating to <a href="https://www.patreon.com/Gimeurcookie">their Patreon</a>.</p>
+            <p>Note: This site is not affiliated with <a href="https://cosmosdex.com/">The Cosmosdex</a> in any way. This site was made specifically for the benefit of fans, and if you want to support [Fortuna] and The Cosmosdex, please consider donating to <a href="https://www.patreon.com/Gimeurcookie">their Patreon</a>. All Fortuna-related assets, unless otherwise noted, are by Gimeurcookie.</p>
         </div>
     </div>
 </div>
