--- a/Fortuna/wwwroot/css/app.css
+++ b/Fortuna/wwwroot/css/app.css
@@ -64,7 +64,7 @@ a:hover, .btn-link:hover {
     flex: max-content;
     flex-shrink: unset;
     flex-direction: row;
-    padding: 0 20px 10px 20px;
+    padding: 0 20px 10px 0;
     min-width: 33.3%;
 }
 
