--- a/Fortuna/wwwroot/css/app.css
+++ b/Fortuna/wwwroot/css/app.css
@@ -64,7 +64,7 @@ a:hover, .btn-link:hover {
     flex: max-content;
     flex-shrink: unset;
     flex-direction: row;
-    padding: 0 20px 10px 0;
+    padding: 0 20px 0 20px;
     min-width: 33.3%;
 }
 
@@ -154,6 +154,7 @@ h2, h3 {
     src: url(https://fonts.gstatic.com/l/font?kit=VEMzRo11tZHs8hG7tPa9zxTg&skey=b796ffb12c919a00&v=v9) format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
+
 /* greek */
 @font-face {
     font-family: 'Gill Sans';
@@ -162,6 +163,7 @@ h2, h3 {
     src: url(https://fonts.gstatic.com/l/font?kit=VEMzRo11tZHs8hG7tPa9yBTg&skey=b796ffb12c919a00&v=v9) format('woff2');
     unicode-range: U+0370-03FF;
 }
+
 /* latin-ext */
 @font-face {
     font-family: 'Gill Sans';
@@ -170,6 +172,7 @@ h2, h3 {
     src: url(https://fonts.gstatic.com/l/font?kit=VEMzRo11tZHs8hG7tPa9xRTg&skey=b796ffb12c919a00&v=v9) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
     font-family: 'Gill Sans';
@@ -178,6 +181,7 @@ h2, h3 {
     src: url(https://fonts.gstatic.com/l/font?kit=VEMzRo11tZHs8hG7tPa9yxTg&skey=b796ffb12c919a00&v=v9) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 /* cyrillic */
 @font-face {
     font-family: 'Poiret One';
@@ -186,6 +190,7 @@ h2, h3 {
     src: url(https://fonts.gstatic.com/s/poiretone/v9/UqyVK80NJXN4zfRgbdfbo5pcV_cx.woff2) format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
+
 /* latin-ext */
 @font-face {
     font-family: 'Poiret One';
@@ -194,6 +199,7 @@ h2, h3 {
     src: url(https://fonts.gstatic.com/s/poiretone/v9/UqyVK80NJXN4zfRgbdfbo5BcV_cx.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
     font-family: 'Poiret One';
