Minor tweaks and adjustments

--- a/Fortuna/Pages/CharacterCreator.razor
+++ b/Fortuna/Pages/CharacterCreator.razor
@@ -83,7 +83,7 @@
         </div>
     </div>
 
-    <img src="@_playerSheet.ImageUrl" alt="Image of the character @_playerSheet.Name." class="char-picture"/>
+    <img src="@_playerSheet.ImageUrl" alt="Image of the character @_playerSheet.Name." class="char-picture" height="500px"/>
     <input @bind="_playerSheet.ImageUrl" inputmode="url" class="char-picture"/>
 
 </div>
