--- a/Fortuna/wwwroot/css/app.css
+++ b/Fortuna/wwwroot/css/app.css
@@ -113,7 +113,7 @@ h2, h3 {
     background-color: #171717;
     border: 1px solid #171717;
     font-size: inherit;
-    cursor: pointer;
+    cursor: text;
     text-align: inherit;
 }
 
